Silva changes
=============

Silva 2.2.1 (unreleased)
------------------------

- Neatened up the toc rendering.

- Modified Kupu toolboxes. Moved delete button to left, expanding textarea (if
all options are on  the column can get long but that's rare). Changed logic 
for breaks. Removed table cell sizing. Made unused buttons display:none.
Adjusted toolbox title rollover tooltips.

- updated opacity settings for image crop window (ported from trunk)


Silva 2.2 (2010-03-31)
----------------------

- A simple PhotoGallery demo view have been added to use on any
  container.

- Silva Links now support again relative links.

- SilvaExternalSources is installed by default, and the toc element in
  the default created SilvaDocument have been removed.

- Deprecate Products.Silva.helpers.makeContainerFilter and makeZMIFilter
  (makeZMIFilter was moved to silva.core.conf.utils).  Fix signature checking
  in Folder.filtered_meta_types.

- kupu: the `link` input field in the link toolbox was changed to be a
  textarea.  In 2.2 releases prior to 2.2 final, the input field changed
  to a textarea on focus and back to an input field onblur, so long urls
  where easier to view.  This caused confusing 'double clicking' behavior
  in order to manually add or update a link (first to unfocus, second to update)

- The formulator lookupwindow field changed to a textarea to address the same
  concerns as the link toolbox in kupu mentioned above.

Silva 2.2b1 (2010-02-01)
------------------------

New Features
~~~~~~~~~~~~

- External Sources are now previewable in kupu.  When an external
  source with preview enabled is added to a document, the rendered
  extneral source is shown in kupu.  When that external source is
  active, or when hovering over it with the mouse, the external source
  will have a different background color, a border, and a 'lock' icon.
  This shows the extent of the external source within the document and
  also provides a hint that it is not editable.
